--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <a name="contents" class="anchor" href="#contents"><span class="octicon octicon-link"></span></a>Contents</h2>
 
 <ul>
+<li>Philonis Alexandrini Opera quae supersunt. <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_1.xml">Vol. 1</a>: <em>De Opificio Mundi</em>, <em>Legum Allegoriarum Lib. I-III</em>, <em>De Cherubim</em>, <em>De Sacrificiis Abelis et Caini</em>, <em>Quod Deterius Potiori Insidiari Soleat</em> (1896) Ed. Leopold Cohn &amp; Paul Wendland. Berlin: Berolini Reimer.</li>
 <li>Philonis Alexandrini Opera quae supersunt. <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_4.xml">Vol. 4</a>: <em>De Abrahamo, De Iosepho, De Vita Mosis Lib. I, De Vita Mosis Lib. II, De Decalogo</em> (1902) Ed. Leopold Cohn &amp; Paul Wendland. Berlin: Berolini Reimer.</li>
 </ul>
       </section>
