Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 <li>
 <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_4.xml">Philonis Alexandrini Opera quae supersunt. Vol. 4</a>: <em>De Abrahamo, De Iosepho, De Vita Mosis Lib. I, De Vita Mosis Lib. II, De Decalogo</em> (1902) Ed. Leopold Cohn &amp; Paul Wendland. Berlin: Berolini Reimer.</li>
 <li>
+<a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_6.xml">Philonis Alexandrini Opera quae supersunt. Vol. 6</a>:  <em>Quod Omnis Probus Liber Sit</em>, <em>De Vita Contemplativa</em>, <em>De Aeternitate Mundi</em>, <em>In Flaccum</em>, <em>Legatio ad Gaium</em> (1915) Ed. Leopold Cohn &amp; Paul Wendland. Berlin: Berolini Reimer.</li>
+<li>
 <em><a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_1886.xml">Fragments of Philo Judaeus</a></em> (1886) Ed. Rendel Harris. Cambridge: Cambridge University Press.</li>
 <li>
 <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philoOmnia_5_2.xml">Philonis Judaei Opera Omnia. Vol. 5, part 2</a>: <em>De mercede meretricis</em>, <em>Libb. I-III De specialibus legibus</em>, <em>De septenario</em>, <em>De festo Cophini</em>, <em>De parentibus colendis</em>, <em>De iudice</em>, <em>De concupiscentia</em>, <em>De iustitia</em>, <em>De creatione principum</em>, <em>De fortitudine</em>, <em>De caritate</em>, <em>De poenitentia</em>, <em>De praemiis et poenis</em>, <em>De execratione</em>, <em>De nobilitate</em>, <em>Quod omnis probus liber</em>, <em>De vita contemplativa</em> (1828) ed. Carl Ernst Richter. Leipzig: Sumtibus E.B. Schwickerti.</li>
