--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <li>
 <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_7.xml">Philonis Alexandrini Opera quae supersunt. Vol. 7</a>: <em>Indices ad Opera</em> (1926) Ed. Leopold Cohn &amp; Paul Wendland. Berlin: Berolini Reimer.</li>
 <li>
+<em><a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_1895.xml">Philo About the Contemplative Life</a></em> (1895) ed. Frederick Cornwallis Conybeare. Oxford: Clarendon Press.</li>
+<li>
 <em><a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philo_1886.xml">Fragments of Philo Judaeus</a></em> (1886) Ed. Rendel Harris. Cambridge: Cambridge University Press.</li>
 <li>
 <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philoOmnia_5_2.xml">Philonis Judaei Opera Omnia. Vol. 5, part 2</a>: <em>De mercede meretricis</em>, <em>Libb. I-III De specialibus legibus</em>, <em>De septenario</em>, <em>De festo Cophini</em>, <em>De parentibus colendis</em>, <em>De iudice</em>, <em>De concupiscentia</em>, <em>De iustitia</em>, <em>De creatione principum</em>, <em>De fortitudine</em>, <em>De caritate</em>, <em>De poenitentia</em>, <em>De praemiis et poenis</em>, <em>De execratione</em>, <em>De nobilitate</em>, <em>Quod omnis probus liber</em>, <em>De vita contemplativa</em> (1828) ed. Carl Ernst Richter. Leipzig: Sumtibus E.B. Schwickerti.</li>
