Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 <li>
 <a href="https://github.com/OpenGreekAndLatin/philo-dev/blob/master/philoOmnia_5_2.xml">Philonis Judaei Opera Omnia. Vol. 5, part 2</a>: <em>De mercede meretricis</em>, <em>Libb. I-III De specialibus legibus</em>, <em>De septenario</em>, <em>De festo Cophini</em>, <em>De parentibus colendis</em>, <em>De iudice</em>, <em>De concupiscentia</em>, <em>De iustitia</em>, <em>De creatione principum</em>, <em>De fortitudine</em>, <em>De caritate</em>, <em>De poenitentia</em>, <em>De praemiis et poenis</em>, <em>De execratione</em>, <em>De nobilitate</em>, <em>Quod omnis probus liber</em>, <em>De vita contemplativa</em> (1828) ed. Carl Ernst Richter. Leipzig: Sumtibus E.B. Schwickerti.</li>
 </ul>
+
+<h4>
+<a name="english-translations-of-philo-alexandrinus-are-available-here" class="anchor" href="#english-translations-of-philo-alexandrinus-are-available-here"><span class="octicon octicon-link"></span></a>English translations of Philo Alexandrinus are available <a href="http://opengreekandlatin.github.io/english_trans-dev/">here</a>.</h4>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/OpenGreekAndLatin">OpenGreekAndLatin</a></p>
